--- a/webcv/index.html
+++ b/webcv/index.html
@@ -5,11 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Cv cá nhân</title>
-    <link rel="stylesheet" href="webcv/1.css">
+    <link rel="stylesheet" href="1.css">
     <link rel="stylesheet" href="css/bootstrap.css">
     <script src="js/bootstrap.js"></script>
     <script src="jquery-3.4.1.js"></script>
-    <script src="webcv/1.js"></script>
+    <script src="1.js"></script>
 </head>
 <body>
     <h3>hello</h3>
